--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "def load_and_preprocess_data(symbol):\n",
-    "    data = pd.read_csv(f'../data/{symbol}_intraday.csv')\n",
+    "    data = pd.read_csv(f'../data/intraday/{symbol}_intraday.csv')\n",
     "    data['date'] = pd.to_datetime(data['date'])\n",
     "    data.set_index('date', inplace=True)\n",
     "    data['close_normalized'] = (data['4. close'] - data['4. close'].mean()) / data['4. close'].std()\n",
